2008-08-26  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.2.txt: Update for final release

	* doc/guide.tex: Windows binary installer requires MSVC++ 5
	* doc/guide.html: Likewise

2008-08-26  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: get_items bugfix (EJAB-716)

2008-08-25  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_privacy_odbc.erl: Prevent case_clause error when
	ejabber_odbc:sql_query returns {error, Reason}
	* src/mod_vcard_odbc.erl: Likewise
	* src/mod_last_odbc.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise

2008-08-25  Badlop  <badlop@process-one.net>

	* src/ejabberd_check.erl: Detect correctly MSSQL and ODBC
	configuration (EJAB-710)

2008-08-24  Geoff Cant  <gcant@process-one.net>

	* src/mod_mud/mod_muc_room.erl: is_visitor/2 fix - use get_role
	not get_affiliation

2008-08-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_router.erl: Fix call to mnesia match_object

2008-08-21  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Fix names of chatroom to room, user to occupant
	* doc/guide.html: Likewise

2008-08-18  Badlop  <badlop@process-one.net>

	* src/mod_register.erl: Change password using mod_register always
	returns success regardless of real result (EJAB-723)
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise

2008-08-16  Badlop  <badlop@process-one.net>

	* src/msgs/sv.msg: Fixed formatting typos

	* src/gen_mod.erl: Export stop_module_keep_config/2 (EJAB-706)

2008-08-13  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Explain that LDAP is read-only storage (thanks to
	Evgeniy Khramtsov)
	* doc/guide.html: Likewise

2008-08-10  Badlop  <badlop@process-one.net>

	* src/msgs/eo.msg: Updated (thanks to Andreas van Cranenburgh)
	* src/msgs/nl.msg: Updated (thanks to Andreas van Cranenburgh)